# backend/src/modules/user/user.routes.js
@@ -1,0 +1,10 @@
+import { Router } from "express";
+
+import { registerUserController, loginUserController } from "./user.controller.js";
+
+const router = Router();
+
+router.post("/register", registerUserController);
+router.post("/login", loginUserController);
+
+export default router;
