# backend/src/routes/auth.js
@@ -1,10 +1,0 @@
-import { Router } from "express";
-
-import { registerUser, loginUser } from "../controllers/authController.js";
-
-const router = Router();
-
-router.post("/register", registerUser);
-router.post("/login", loginUser);
-
-export default router;
